# opengl-explorer

./: .gitignore  CMakeLists.txt  gltest_until.h  main.cpp
Base/: CMakeLists.txt
Base/include/Base/: maths_utils.h
Base/src/: maths_utils.cpp  shader_utils.cpp
attribute/: CMakeLists.txt
attribute/shaders/: vertex_shader.glsl
attribute/src/: main.cpp
shaders/: vertex_shader.glsl
uniformblock/: CMakeLists.txt
uniformblock/shaders/: vertex_shader.glsl
uniformblock/src/: main.cpp
